# game-tom-benchmark

./: .gitignore  avalon_testcases.json  pyproject.toml  spec.md
eval/: README.md  __init__.py  llm.py  metrics.py  prompt.py  run_eval.py
