[project]
name = "miulab-tom-benchmark"
version = "0.1.0"
description = "ToM benchmark evaluation pipeline (game domain)"
readme = "eval/README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]
local = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py39"
